--- a/themes/chakame/assets/css/home-page.css
+++ b/themes/chakame/assets/css/home-page.css
@@ -1,871 +1,20 @@
 /* Home Page */
 
-.homepageHeader {
-  margin-block: 129px;
-}
-
-.homepageHeader__content{
-  padding-left: 100px;
-  padding-right: 70px;
-}
-
-.homepageHeader__summary {
-  margin-top: 15px;
-  border-left: 1.5px solid var(--Zodiac);
-  padding-left: 20px;
-}
-
-.homepageHeader__buttons {
-  padding-top: 30px;
-}
-
-.homepageHeader__buttons button {
-  margin-right: 20px;
-}
-
-.homepageRecources {
-  padding-bottom: 100px;
-}
-
-.homepageRecources__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.homepageRecources__title .body-large {
-  color: var(--Maroon);
-}
-
-.homepageRecources__title h2 {
-  padding-bottom: 30px;
-}
-
-.homepageRecources__tags {
-  display: flex;
-  align-items: flex-start;
-  gap: 16px;
-  padding-bottom: 40px;
-  flex-wrap: wrap;
-}
-
-.homepageRecources__tags .MerlotLightPillButton{
-  color: var(--Merlot);
-}
-
-.homepageRecources__tags :nth-child(4) {
-  display: none;
-}
-
-.homepageRecources__tags :nth-child(5) {
-  display: none;
-}
-
-
-.homepageResources__form {
-  background: var(--White);
-  display: flex;
-  padding: 40px;
-  margin: 40px 105px 40px 105px;
-  gap: 32px;
-  align-items: center;
-}
-
-.homepageResources__form form {
-  width: 100%;
-}
-
-.homepageResources__form select {
-  width: 42%;
-  height: 40px;
-  margin-right: 16px;
-}
-
-.homepageCivil{
-  margin-top: 120px;
-}
-.homepageCivil__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.homepageCivil__title .body-large {
-  color: var(--Maroon);
-}
-
-.homepageCivil__title h2 {
-  padding-bottom: 30px;
-}
-
-.homepageCivil__box{
-  display: flex;
-}
-
-.homepageCivil__box___img {
-  height: 747px;
-  flex-shrink: 0;
-}
-
-.homepageCivil__box___img img{
-  width: 100%;
-  height: inherit;
-}
-
-.homepageCivil__box___card {
-  flex-shrink: 0;
-  background: var(--Merlot);
-  display: grid;
-  padding: 60px 0 60px 60px;
-}
-
-.homepageCivil__box___card h6 {
-  color: var(--White);
-}
-
-.homepageCivil__box___card h5 {
-  color: var(--White);
-}
-
-.homepageCivil__slider_card{
-  background-color: var(--White);
-  display: flex;
-  padding: 20px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
-  width: 335px;
-  height: 386px;
-}
-
-.homepageCivil__slider_card h5{
-  color: var(--Midnight);
-  padding: 0;
-  margin: 0;
-}
-
-.homepageCivil__slider_card h6{
-  color: var(--Midnight);
-  width: auto;
-  padding: 0;
-}
-
-.homepagePressing {
-  padding-top: 240px;
-  overflow: hidden;
-}
-
-.homepagePressing__title {
-  padding-bottom: 40px;
-}
-
-.HomePressing__Buttons {
-  margin-top: 40px;
-  margin-inline: -300px;
-}
-
-.HomePressing__Buttons button:first-child{
-  margin-left: -35px;
-}
-
-.HomePressing__Buttons button {
-  margin-inline: 10px;
-  margin-bottom: 20px;
-  /* max-width: 20ch;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; */
-}
-
-.peopelComents {
-  margin-block: 120px;
-  padding-block: 120px;
-  background-color: #EEF2FB;
-}
-
-.peopelComents__Slider {
-  margin-top: 60px;
-  height: 310px;
-
-}
-
-.peopelComents__Slider img {
-  width: 45px;
-  height: 38px;
-  flex-shrink: 0;
-}
-
-.peopelComents__Rightside {
-  background-color: var(--Zodiac);
-  padding: 77.985px 42px 77.485px 43px;
-}
-
-.peopelComents__Rightside_Card label {
-  color: var(--White);
-  font-family: "Cera Pro";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal
-}
-
-.peopelComents__Rightside_Card img {
-  width: 80px;
-  height: 57.531px;
-}
-
-.peopelComents__Rightside_Card_chackBox {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 16px;
-}
-
-.peopelComents__Rightside_Card_chackBox input {
-  border-radius: 0 !important;
-  background-color: var(--Zodiac);
-}
-
-.peopelComents__Rightside_Card_Title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-  padding-inline: 60px;
-  margin-bottom: 40px;
-}
-
-.peopelComents__Rightside_Card_Title p {
-  color: var(--White);
-  text-align: center;
-  font-family: "Cera Pro";
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 130%;
-}
-
-.homepageNewsroom {
-  padding-top: 120px;
-}
-
-.homepageNewsroom__subject {
-  display: flex;
-}
-
-.homepageNewsroom__subject p {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  background-color: var(--Tory);
-}
-
-.homepageNewsroom__subject .body-large {
-  color: var(--Zodiac);
-  margin-left: 12px;
-  margin-bottom: 0 !important;
-  height: 24px;
-}
-
-.homepageNewsroom__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: 60px;
-}
-
-.homepageNewsroom__title .body-large {
-  color: var(--Tory);
-}
-
-.homepageNewsroom__title h2 {
-  padding-bottom: 30px;
-}
-
-.homepageVideo {
-  padding-top: 120px;
-  padding-bottom: 240px;
-}
-
-.homepageVideo__background_left {
-  background-color: var(--PastelBlue);
-  height: 690px;
-}
-
-.homepageVideo__background_right {
-  background-color: var(--LightPastelBlue);
-  height: 690px;
-}
-
-.homepageVideo__detail {
-  display: flex;
-  margin-top: -550px;
-}
-
-.homepageVideo__text {
-  padding-left: 120px;
-  padding-top: 40px;
-}
-
-.homepageVideo__subject {
-  display: flex;
-}
-
-.homepageVideo__subject p {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  background-color: var(--PastelBlue);
-}
-
-.homepageVideo__subject .body-large {
-  color: var(--Midnight);
-  margin-left: 12px;
-  margin-bottom: 0 !important;
-  height: 24px;
-}
-
-.homepageVideo__title button {
-  margin-top: 30px;
-}
-
-.homepageVideo__title h6 {
-  margin-top: 20px;
-}
-
-.homepageMember__subject {
-  display: flex;
-}
-
-.homepageMember__subject p {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  background-color: var(--Tory);
-}
-
-.homepageMember__subject .body-large {
-  color: var(--Zodiac);
-  margin-left: 12px;
-  margin-bottom: 0 !important;
-  height: 24px;
-}
-
-.homepageMember__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: 40px;
-}
-
-.homepageMember__title .body-large {
-  color: var(--Tory);
-}
-
-.homepageMember__ {
-  margin-left: 45px;
-}
-
-.homepageMember__background {
-  background: linear-gradient(90deg, #132554 1.03%, rgba(19, 37, 84, 0.00) 55.46%, rgba(19, 37, 84, 0.00) 100%);
-}
-
-.homepageMember__box {
-  margin-top: -500px;
-  position: absolute;
-  gap: 20px;
-  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.20);
-}
-
-.homepageMember__box_white1 {
-  background-color: var(--White);
-  width: 486.255px;
-  border-left: 5px solid var(--Zodiac);
-  margin-bottom: 20px;
-  padding: 20px;
-  margin-left: -40px;
-}
-
-.homepageMember__box_white2 {
-  background-color: var(--White);
-  width: 486.255px;
-  border-left: 5px solid var(--Tory);
-  margin-bottom: 20px;
-  padding: 20px;
-  margin-left: -40px;
-}
-
-.homepageMember__box_white3 {
-  background-color: var(--White);
-  width: 486.255px;
-  border-left: 5px solid var(--PastelBlue);
-  margin-bottom: 20px;
-  padding: 20px;
-  margin-left: -40px;
-}
-
-.homepageMember__box_white h5,
-.homepageMember__box_white h6 {
-  padding-left: 30px;
-}
-
-.homepageMember__box_blue {
-  background-color: var(--Tory);
-  border-left: 5px solid var(--PastelBlue);
-  width: 486.255px;
-  padding: 40px;
-  margin-left: -40px;
-}
-
-
-.homepageMember__box_blue h6 {
-  color: var(--White);
-  margin: 0px;
-  padding-left: 30px;
-
-}
-
-.homepageOther {
-  margin-top: 60px;
-  margin-bottom: 120px;
-}
+.homeheader{
+  height: 100vh;
 
-.homepageOther__cards {
-  margin-top: 30px;
-  justify-content: space-between;
 }
 
-.homepageOther__card1,
-.homepageOther__card2 {
-  padding: 12.5px;
-  height: 600px;
-  width: 607px;
-  position: relative;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.80) 70.14%), url(../images/Donate1.jfif) lightgray 50% / cover no-repeat;
+.homeheader__video{
+  height: 80vh;
+  padding-inline: 40px;
 }
 
-.uhomepageOtherCardGradient {
-  width: 100%;
+.homeheader__video{
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.80) 70.14%);
-  opacity: 0.9;
-}
-
-.homepageOther__card_content {
-  z-index: 2;
-  color: var(--White);
-  position: absolute;
-  bottom: 30px;
-  left: 0;
-  padding-inline: 30px;
-}
-
-
-/* responsive HomePage */
-
-
-@media only screen and (max-width: 600px) {
-
-  .homepageHeader {
-    margin-block: 48px;
-    padding-bottom: 0;
-  }
-
-  .homepageHeader__logo {
-    height: 232px;
-  }
-
-  .homepageHeader__logo img {
-    width: 320px;
-    height: 232px;
-  }
-
-  .homepageHeader__content{
-    margin-top: 32px;
-    padding-inline: 30px;
-  }
-  .homepageHeader__summary {
-    font-size: 16px;
-    margin-top: 24px;
-    border: none;
-    padding-left: 0px;
-    color: var(--Zodiac);
-    width: 100%;
-    text-align: center;
-  }
-
-  .homepageHeader__buttons {
-    padding-top: 32px;
-    padding-bottom: 48px;
-    display: flex;
-    gap: 20px;
-  }
-
-  .homepageHeader__buttons button {
-    margin-right: 0;
-
-  }
-
-  .homepageHeader__title {
-    color: var(--Zodiac);
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 130%;
-  }
-
-  .homepageRecources {
-    padding-top: 64px;
-  }
-
-  .homepageRecources__title h2 {
-    font-size: 28px;
-    padding-bottom: 0;
-  }
-
-  .homepageRecources__title {
-    display: block;
-    padding-bottom: 24px;
-  }
-
-  .homepageRecources__tags :nth-child(4) {
-    display: flex;
-  }
-  
-  .homepageRecources__tags :nth-child(5) {
-    display: flex;
-  }
-
-  .homepageRecources__tags :nth-child(3) {
-    display: none;
-  }
-
-  .homepageResources__form {
-    padding: 40px;
-    gap: 32px;
-    width: 100%;
-    margin: 0px;
-  }
-
-  .homepageResources__form form {
-    width: 100%;
-  }
-
-  .homepageResources__form form select {
-    width: 100%;
-    height: 41px;
-    padding: 10px 20px 10px 20px;
-    margin-bottom: 32px;
-
-  }
-
-  .homepageResources__form form button {
-    width: 100%;
-    height: 56px;
-
-  }
-
-  .homepageCivil__title h2 {
-    font-size: 28px;
-    padding-bottom: 0;
-  }
-
-  .homepageCivil__title {
-    display: block;
-    gap: 16px;
-    padding-bottom: 30px;
-  }
-
-  .homepageCivil__box {
-    display: block;
-  }
-
-  .homepageCivil__box___img {
-    height: auto;
-  }
-
-  .homepageCivil__box___img img {
-    height: 311px;
-    width: 100%;
-    object-fit: cover;
-  }
-
-  .homepageCivil__box___card h6 {
-    padding-top: 64px;
-    padding-left: 30px;
-    width: 312px;
-  }
-
-  .homepageCivil__box___card h5 {
-    padding-left: 250px;
-  }
-
-  .homepageCivil__slider_card h5{
-    padding: 0;
-  }
-
-  .homepageCivil__slider_card h6{
-    padding: 0;
-  }
-
-  .homepagePressing {
-    padding-top: 128px;
-  }
-
-  .homepagePressing__title h2 {
-    font-size: 28px;
-  }
-
-  .HomePressing__Buttons {
-    margin-inline: -50px;
-    height: 370px;
-  }
-
-  .peopelComents {
-    margin-block: 48px;
-    padding-block: 48px;
-    padding-inline: 30px;
-    margin-bottom: 0;
-  }
-
-  .peopelComents__Leftside h2 {
-    font-size: 28px;
-  }
-
-  .peopelComents__Slider {
-    height: 400px;
-    margin-top: 32px;
-  }
-
-  .peopelComents_content {
-    padding-inline: 0;
-  }
-
-  .peopelComents__Rightside {
-    margin-top: 40px;
-  }
-
-  .peopelComents__Rightside_Card_Title {
-    padding-inline: 0;
-  }
-
-  .peopelComents__Rightside_Card_Title p {
-    font-size: 18px;
-  }
-
-  .peopelComents__Rightside_Card_chackBox label {
-    font-size: 14px;
-  }
-
-  .homepageNewsroom {
-    padding-top: 64px;
-  }
-
-  .homepageNewsroom__title {
-    display: block;
-  }
-
-  .homepageNewsroom__title h2 {
-    font-size: 28px;
-    padding-bottom: 24px;
-  }
-
-  .homepageNewsroom__title a {
-    color: var(--Maroon);
-  }
-
-  .homepageVideo {
-    padding-top: 64px;
-    padding-bottom: 64px;
-  }
-
-  .homepageVideo__detail {
-    display: block;
-    padding-left: 30px;
-    padding-right: 30px;
-    object-fit: cover;
-    margin-top: -717px;
-  }
-
-  .homepageVideo__background_left {
-    height: 281px;
-  }
-
-  .homepageVideo__background_right {
-    height: 500px;
-  }
-
-  .homepageVideo__video img {
-    width: 100%;
-    height: 320px;
-  }
-
-  .homepageVideo__text {
-    padding-left: 0;
-    padding-top: 60px;
-  }
-
-  .homepageVideo__title h1 {
-    font-size: 28px;
-  }
-
-  .homepageMember {
-    padding-top: 64px;
-  }
-
-  .homepageMember__title h2 {
-    font-size: 28px;
-  }
-
-  .homepageMember__title a {
-    display: none;
-  }
-
-  .homepageMember__background {
-    background: linear-gradient(358deg, #132554 1.45%, rgba(19, 37, 84, 0.00) 62.03%, rgba(19, 37, 84, 0.00) 111.59%);
-  }
-
-  .homepageMember__background img {
-    width: 100%;
-    height: 276px;
-  }
-
-  .homepageMember__ {
-    margin-left: 0;
-    padding-bottom: 364px;
-  }
-
-  .homepageMember__box {
-    margin-top: -50px;
-  }
-
-  .homepageMember__box_white1,
-  .homepageMember__box_white2,
-  .homepageMember__box_white3,
-  .homepageMember__box_blue {
-    width: 100%;
-    height: 90px;
-    margin-left: 0;
-    box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.20);
-  }
-
-  .homepageOther {
-    margin-bottom: 64px;
-  }
-
-  .homepageOther h2 {
-    font-size: 28px;
-    padding-top: 64px;
-  }
-
-  .homepageOther__cards {
-    margin-top: 24px;
-    gap: 25px;
-  }
-
-  .homepageOther__card1,
-  .homepageOther__card2 {
-    width: 100%;
-    height: 322px;
-  }
-}
-
-
-/* cards  */
-.largeHorizontalcard__content
-, .mediumHorizontalcard__content{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.largeHorizontalcard__img {
-  height: 299px;
-}
-.largeHorizontalcard__img img {
-  width: 610px;
-  height: 299px;
-}
-
-.mediumHorizontalcard__img {
-  height: 211px;
-}
-
-
-@media only screen and (max-width: 600px) {
-  .largeHorizontalcard__img {
-    margin-bottom: 20px;
-    height: 262px;
-}
-.largeHorizontalcard__img img {
-    width: 354px;
-    height: 263px;
-    margin-bottom: 20px;
-}
-.mediumHorizontalcard__img {
-  margin-bottom: 30px;
-  height: 262px;
-}
-}
-
-
-
-/* slider  */
-
-.homeCivilSlider{
- display: flex;
- overflow: hidden;
- width: -webkit-fill-available;
- height: fit-content;
-
-}
-.homeCivilSlider__card{
-  padding: 20px;
-  background-color: var(--White);
-  height: 386px;
-}
-.homeCivilSlider__card h5{
-  height: 33px;
-  overflow: hidden;
-}
-.homeCivilSlider__card p{
-  height: 72px;
-  overflow: hidden;
-}
-.homeCivilSlider__card_image{
-  height: 211px;
-}
-.homeCivilSlider__card img{
   width: 100%;
-  height: inherit;
 }
 
-.homeCivilSlider .slick-track{
-  height: 386px;
- }
- .homeCivilSlider .slick-slide{
-  margin-inline: 10px;
-  width: 335px !important;
- }
- .homeCivilSlider .slick-list{
-  height: 460px;
- }
-
- .homeCivilSlider .slick-next,
- .homeCivilSlider .slick-prev{
-  top: 95%;
- }
- .homeCivilSlider .slick-prev{
-  left: 10px;
- }
- .homeCivilSlider .slick-next{
-  left: 40px;
- }
+.homeheader__content{
+  
+}
