--- a/themes/chakame/assets/css/header.css
+++ b/themes/chakame/assets/css/header.css
@@ -4,25 +4,43 @@
 }
 
 .navbar{
-/* From https://css.glass */
-background: rgba(40, 40, 39, 0.64);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(1.9px);
--webkit-backdrop-filter: blur(1.9px);
-border: 1px solid rgba(40, 40, 39, 0.3);
+    padding-inline: 20px;
+    /* From https://css.glass */
+    background: rgba(9, 9, 9, 0.58);
+    border-radius: 0 0 16px 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.7px);
+    -webkit-backdrop-filter: blur(1.7px);
 }
-.navbar img{
-    width: 150px;
-    height: 100px;
+
+.navbar-nav {
+    padding-left: 2rem !important;
+    gap: 40px;
 }
 
 .navbar-collapse{
-    padding-block: 12px;
+    justify-content: center;
 }
 
-.navbar-collapse a{
-    font-size: 18px;
-    font-weight: bold;
-    color: black;
+
+.chimoLogo{
+    width: 50px;
+    height: 50px;
+}
+
+.chimoLogo img{
+    width: inherit;
+    height: inherit;
+}
+
+.nav-link{
+    font-family: chimo;
+}
+
+
+/* Responsive */
+@media only screen and (max-width: 600px) {
+    .navbar-collapse{
+        margin-top: 20px;
+    }
 }
