--- a/themes/chakame/assets/css/home-page.css
+++ b/themes/chakame/assets/css/home-page.css
@@ -1,9 +1,9 @@
 /* Home Page */
 
 .homeheader{
-  background-image: url(../images/h.png);
+  /* background-image: url(../images/h.png);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   /* position: absolute;
   top: 0;
   left: 0; */
@@ -15,16 +15,13 @@
   align-items: center;
 }
 
+.js_summary_body{
+  display: none;
+}
+
 .homeheader img{
-  width: 18%;
-  height: 27%;
-/* From https://css.glass */
-background: rgba(40, 40, 39, 0.64);
-border-radius: 100%;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(1.9px);
--webkit-backdrop-filter: blur(1.9px);
-border: 1px solid rgba(40, 40, 39, 0.3);
+  width: inherit;
+  height: inherit;
 }
 
 .homeheader__body{
@@ -55,7 +52,7 @@ border: 1px solid rgba(40, 40, 39, 0.3);
 }
 
 .flex-slide_card_category{
-  color: var(--global-color-black);
+  color: var(--White);
   font-family: chimo;
   font-size: 14px;
   font-style: normal;
@@ -81,10 +78,15 @@ border: 1px solid rgba(40, 40, 39, 0.3);
   display: flex;
   flex-direction: row;
   align-items: center;
-
 }
+
+.flex-slide_card_content .body-small{
+  color : var(--White);
+  line-height: 210%;
+}
+
 .flex-slide_card_content_title{
- color : var(--global-color-purple);
+ color : var(--White);
   font-family: chimo;
   font-size: 80px;
   font-style: normal;
@@ -174,7 +176,7 @@ border: 1px solid rgba(40, 40, 39, 0.3);
   justify-content: center;
 }
 .flex-title h4{
-  color: var(--global-color-lightBrown);
+  color: var(--White);
   font-family: chimo;
   font-size: 31px;
   font-style: normal;
@@ -357,4 +359,140 @@ border: 1px solid rgba(40, 40, 39, 0.3);
 
 .photo img:hover .photo__content h5{
   visibility: visible !important;
+}
+
+
+/* mobile   */
+
+#home-flex-container-mobile{
+  display : none;
+}
+
+.flex-container-mobile{
+  height: 98vh;
+  display : flex;
+  flex-direction: column;
+}
+
+.flex-slide-mobile {
+  /* background-color :var(--white); */
+  /* margin-top : -20px; */
+  position: relative;
+  cursor: pointer;
+  animation-name: flex-slide-growBack;
+  animation-duration: 1s;
+  animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-fill-mode: forwards;
+}
+
+.flex-slide-mobile:hover {
+  animation-name: flex-slide-grow;
+  animation-duration: 1s;
+  animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-fill-mode: forwards;
+}
+
+.flex-slide-mobile:hover  .flex-title-mobile{
+  animation-name: changeheight;
+  animation-duration: 1s;
+  animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-fill-mode: forwards;
+}
+
+/* .flex-slide-mobile:hover  .flex-title-mobile h4,
+.flex-slide-mobile:hover  .flex-title-mobile p{
+  animation-name: change-Color;
+  animation-duration: 1s;
+  animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-fill-mode: forwards;
+} */
+
+
+.flex-slide-mobile:has(+ .flex-slide-mobile:hover){
+  /* background-color : var(--global-color-purple); */
+}
+
+.flex-slide-mobile:hover  .flex-title-mobile-image{
+  display:unset;
+}
+.flex-slide-mobile:hover  .flex-title-mobile p{
+  display:unset;
+}
+
+.flex-title-mobile{
+  position: absolute;
+  margin-inline: 0px;
+  color : white;
+  background-color : rgb(82 116 122 / 100%);
+  box-shadow: 0 5px 5px 0px #00000073;
+  width: 100vw;
+  /* height: 100%; */
+  animation-name: changeheightBack;
+  animation-duration: 2s;
+  animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-fill-mode: forwards;
+  border-radius: 0px 0px 60px 60px;
+  display: flex;
+  /* align-content: center; */
+  flex-direction: row;
+  align-items: center;
+  padding-inline: 30px;
+}
+
+.flex-title-mobile-subject{
+  /* width: -webkit-fill-available; */
+}
+.flex-title-mobile-image{
+  display:none;
+  width: 100vw;
+  height: 100%;
+}
+.flex-title-mobile-image img{
+  width: inherit;
+  height: inherit;
+  border-radius: 0px 0px 60px 60px;
+}
+
+.flex-title-mobile h4{
+  padding-left : 50px;
+  color: var(--white);
+  font-family: chimo;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.flex-title-mobile-description{
+  padding-right : 40px;
+}
+.flex-title-mobile p{
+  color: var(--white);
+  font-family: chimo;
+  font-size: 9px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-block : auto;
+}
+
+.flex-title-mobile p{
+  display : none;
+}
+
+
+
+/* Responsive */
+@media only screen and (max-width: 600px) {
+  .homeheader{
+    height: 40vh;
+  }
+
+  #home-flex-container-desctop{
+    display : none;
+    }
+    #home-flex-container-mobile{
+    display : flex;
+    }
+  
 }
