about and contact

--- a/themes/chakame/assets/css/contact-us.css
+++ b/themes/chakame/assets/css/contact-us.css
@@ -1,279 +1,16 @@
-.contactusHeader{
-    background-image: url(../images/contactus-Header.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+
+.contactusHeader__content h1{
+    font-family: chimo;
+    padding-top: 120px;
+}
+.contactusHeader__content p{
+    font-family: chimo;
 }
 
-.contactusHeader__content{
-    padding: 120px 100px 200px 100px;
-}
-
-.contactusHeader__content div {
-    display: flex;
-    justify-content: center;
-}
-
-.contactusHeader__content span {
-    width: 24px;
-    height: 24px;
-    background-color: var(--Merlot);
-    margin-right: 12px;
-}
-
-.contactusHeader__content p {
-    margin: 0;
-    text-align: center;
-    overflow: auto;
-}
-
-.contactusHeader__content h1 {
-    margin-block: 20px;
-    text-align: center;
-}
-.contactusConent{
-    background: rgba(165, 195, 242, 0.25);
-    padding: 100px 50px;
-    height: 1049px;
-}
-/* .contactusConent__information{
-    /* padding-inline: 70px; }*/
-
-.contactusConent__information_img{
-    width: 760px;
-    height: 849px;
-}
-.contactusConent__information_form{
-    margin-block: 70px;
-    margin-left: -120px;
-    background-color: var(--White);
-    box-shadow: 0px 16px 64px 0px rgba(19, 37, 84, 0.25);
-    width: 545px;
-    height: 690px;
-
-}
-
-.contactusConent__information_form form{
-    margin: 32px; 
-    text-align: start;
-}
-.contactusForm-item {
-    
-    margin-bottom: 16px;
-   
-}
-.contactusForm-item label {
-    margin-bottom: 8px;
-}
-.contactusForm-item input{
-    width: 100%;
-    height: 50px;
-    border: 1px solid #ACBEEC;
-    padding-left: 20px;
-}
-.contactusForm-item select{
-    width: 100%;
-    height: 50px;
-    border: 1px solid #ACBEEC;
-    padding-left: 20px;
-}
-/* #message{
-    width: 100%;
-    height: 111px;
-} */
-.contactusForm-item textarea{
-    width: 100%;
-    border: 1px solid #ACBEEC;
-    padding-left: 20px;
-}
-.contactusConent__information_form form button{
-    margin-top: 0px;
-    width: 180px;
-    height: 56px;
-}
-.contactusSchedule{
- margin-block: 120px;
-}
-.contactusSchedule__content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.contactusSchedule h3{
-margin-bottom: 16px;
-padding-inline: 388px;
-}
-.contactusSchedule p{
-margin-bottom: 24px;
-text-align: center;
-}
-.contactusSchedule img{
-    width: 849px;
-    height: 635px;
-    margin-inline: 250px;
-}
-.contactusWays{
-    background-image: url(../images/contactusWays.jpg);
-    padding: 100px 120px;
-    height: 405px;
-    margin-bottom: 100px;
-    display: flex;
-    justify-content: space-evenly;
-}
-.contactusWays__card{
-  padding-left: 0px;
-}
-.contactusWays__card h4{
-    color:var(--White);
-  }
-.contactusWays__card p{
-    margin-bottom: 24px;
-    color: var(--White);
-    width: 333px;
-    height: 54px;
-}
-.contactusWays__icon{
-    width: 32px;
-    height: 32px;
-}
-#contactusWays__card_p{
-    
-    text-decoration-line: underline;
-}
 /*-----------------------------------------responsive-------------------------------------*/
 @media only screen and (max-width: 600px) {
     .contactusHeader__content{
         padding:64px 30px;
     }
-    .contactusHeader__content div {
-        display: flex;
-        justify-content: center;
-    }
-    .contactusHeader__content span {
-        width: 16px;
-        height: 16px;
-        margin-right: 12px;
-    }
-    .contactusHeader__content p {
-       font-size: 14px;
-    }
     
-    .contactusHeader__content h1 {
-        margin-block: 8px;
-        font-size: 28px;
-    }
-    .contactusConent{
-        padding: 0px;
-        height: 1169px;  
-        width: 414px;
-        margin-bottom: 48px;
-    }
-    /* .contactusConent__information{
-    
-    } */
-
-    .contactusConent__information_img{
-        width:100%;
-        height: 380px;
-        padding: 0px;
-        margin-inline: 0px;
-    }
-    .contactusConent__information_form{
-        margin-top: -50px;
-        margin-inline: 30px;
-        margin-bottom: 48px;
-        width:354px;
-        height: 791px;
-        padding: 32px;
-    }
-    
-    .contactusConent__information_form form{
-        margin: 0px; 
-    
-    }
-    .contactusForm-item {
-        
-        margin-bottom: 8px;
-       
-    }
-    .contactusForm-item label {
-        margin-bottom: 8px;
-    }
-    .contactusForm-item input{
-        width: 100%;
-        height: 50px;
-        margin-top: 12px;
-        padding-left: 20px;
-    }
-    .contactusForm-item select{
-        width: 100%;
-        height: 50px;
-        margin-top: 8px;
-        padding-left: 20px;
-    }
-   
-    .contactusForm-item textarea{
-        width: 100%;
-        border: 1px solid #ACBEEC;
-        padding-left: 20px;
-    }
-    .contactusConent__information_form form button{
-        margin-top: 0px;
-    }
-    .contactusSchedule{
-        margin-block:0px;
-        padding-inline:48px 30px;
-       
-       }
-       .contactusSchedule h3{
-       padding-inline: 0px;
-       font-size: 28px;
-       height: 36px;
-       overflow: hidden;
-       }
-       .contactusSchedule p{
-       margin-bottom: 40px;
-       padding-inline: 0px;
-       font-size: 16px;
-       }
-       .contactusSchedule img{
-           width: 354px;
-           height: 293px;
-           margin-inline: 0px;
-           margin-bottom: 48px;
-           padding-right: 20px;
-       }
-       .contactusWays{
-        padding: 64px 30px;
-        height: 839px;
-        margin-bottom: 48px;
-        display: flex;
-        justify-content: space-evenly;
-    }
-    .contactusWays__card{
-      padding-left: 0px;
-      margin-bottom: 48px;
-      text-align: center;
-    }
-    .contactusWays__card h4{
-        font-size: 28px;
-      }
-    .contactusWays__card p{
-        margin-bottom: 18px;
-        width: 333px;
-        height: 54px;
-    }
-    .contactusWays__icon{
-        width: 32px;
-        height: 32px;
-        padding-left: 150px;
-        
-    }
-    #contactusWays__card_p{
-        
-        text-decoration-line: underline;
-    }
-
-
-
 }
