--- a/themes/chakame/style.css
+++ b/themes/chakame/style.css
@@ -281,9 +281,9 @@ h6{
   margin: 35px 0;
 }
 .horizontalCard__image{
-  height: 260px;
-  width: 330px;
-  margin-left: 30px;
+  /* height: 260px; */
+  /* width: 330px; */
+  /* margin-left: 30px; */
 }
 
 .horizontalCard__image img{
@@ -295,6 +295,12 @@ h6{
   align-self: stretch; 
   border-radius: 10%;
 }
+.horizontalCard__content p{
+  height: 73px;
+  overflow: auto;
+  text-align: justify;
+}  
+
 
 .horizontalCard__content{
   padding-block: 30px;
@@ -304,13 +310,15 @@ h6{
   justify-content: space-between;
 }   
 .horizontalCard__content_text{
+  font-family: chimo;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
   line-height: 140%;
   /* margin: auto; */
-  height: 60px;
-  overflow: hidden;
+  /* height: 60px;
+  overflow: hidden; */
+  color: #111111;
 }
 .horizontalCard__content_link{
   font-size: 14px;
@@ -329,5 +337,16 @@ h6{
 /* responsive ------------ */
 
 @media only screen and (max-width: 600px) {
-
+  .horizontalCard{
+    border: 1px solid  rgb(82 116 122 / 100%);
+    padding-block: 20px;
+    border-radius: 3%;
+    margin: 15px 0;
+  }
+  .horizontalCard__image img{
+    border-radius: 3%;
+  }
+  .horizontalCard__content_text{
+    font-size: 18px;
+  }
 }   
